<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017.
  ~ Project Name:Life Scheduler
  ~ Created By Shudipto Trafder
  ~ The Android Open Source Project
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/addTaskNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/card_element_margin"
        android:layout_marginStart="@dimen/card_element_margin"
        android:layout_marginTop="@dimen/card_element_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/customName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/custom_name"
            android:inputType="textPersonName"
            android:padding="@dimen/main_list_universal_padding"
            android:textColorHint="?attr/colorAccent"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/card_element_margin"
        android:layout_marginStart="@dimen/card_element_margin"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskNameLayout">

        <EditText
            android:id="@+id/customEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/custom_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/main_list_universal_padding"
            android:textColorHint="?attr/colorAccent"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/addTaskSolLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/card_element_margin"
        android:layout_marginStart="@dimen/card_element_margin"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <EditText
            android:id="@+id/customFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/custom_feedback"
            android:inputType="textMultiLine"
            android:lines="4"
            android:maxLines="10"
            android:padding="@dimen/main_list_universal_padding"
            android:textColorHint="?attr/colorAccent"/>
    </android.support.design.widget.TextInputLayout>


</android.support.constraint.ConstraintLayout>